fix:Text alignment and response issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,10 @@
+body, html {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*# sourceMappingURL=style.css.map */
